--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -144,7 +144,7 @@ bots:
   # useCore - if enabled it just sends the command using chat instead of using core. recommended to enable useChat too when this is disabled
   # useCorePlaceBlock - uses the place block core instead of the main core. only used if useCore is enabled
   # useChat - when the bot tellraws it will chat instead of using the core to run tellraw
-  # coreCommandSpy - set to true if server supports enabling player's commandspy though command block
+  # coreCommandSpy - set to true if server supports enabling player's commandspy through command block, defaults to true
   # resolveSRV - whether to resolve SRV records on the server. the notchian minecraft doesn't resolve them
   # essentialsMessages - the messages in essentials that the bot uses for self care (no example is intentional)
   # coreRateLimit - will ignore commands if reached the ratelimit
@@ -163,7 +163,7 @@ bots:
   #   useCore: true
   #   useCorePlaceBlock: false
   #   useChat: false
-  #   coreCommandSpy: false
+  #   coreCommandSpy: true
   #   resolveSRV: true
   #   reconnectDelay: 2000
   #   chatQueueDelay: 125
