feat: "hashing" via discord by DM-ing the bot `hash`

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -41,6 +41,8 @@ chomeNSMod:
 discord:
   enabled: false
   prefix: 'default!'
+  serverId : 'id here'
+  enableDiscordHashing: true
   token: 'token here'
   trustedRoleName: 'Trusted'
   adminRoleName: 'Admin'
