feat: rainbow armor (most useless on the bot but only for when it's unvanished)

--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -90,6 +90,9 @@ ownerAuthentication:
 # will tellraw `{player} cleared the chat`
 announceClearChatUsername: false
 
+# literal rainbow armor using leather armors
+rainbowArmor: true
+
 trusted:
   - 'player name'
 
