--- a/build.gradle
+++ b/build.gradle
@@ -41,25 +41,25 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.geysermc.mcprotocollib:protocol:1.21.5-SNAPSHOT'
-    implementation 'net.kyori:adventure-text-serializer-plain:4.21.0'
-    implementation 'net.kyori:adventure-text-serializer-legacy:4.21.0'
-    implementation 'net.kyori:adventure-text-serializer-ansi:4.21.0'
+    implementation 'org.geysermc.mcprotocollib:protocol:1.21.7-1'
+    implementation 'net.kyori:adventure-text-serializer-plain:4.23.0'
+    implementation 'net.kyori:adventure-text-serializer-legacy:4.23.0'
+    implementation 'net.kyori:adventure-text-serializer-ansi:4.23.0'
     implementation 'com.google.code.gson:gson:2.13.1'
     implementation 'com.google.guava:guava:33.4.8-jre'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
-    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.3'
-    implementation 'org.jline:jline:3.30.3'
-    implementation 'it.unimi.dsi:fastutil:8.5.15'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.1'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.4'
+    implementation 'org.jline:jline:3.30.4'
+    implementation 'it.unimi.dsi:fastutil:8.5.16'
     implementation 'ch.qos.logback:logback-classic:1.5.18'
     implementation 'com.github.pircbotx:pircbotx:2.3.1'
     implementation 'com.github.ricksbrown:cowsay:1.1.0'
     implementation 'org.yaml:snakeyaml:2.4'
     implementation 'party.iroiro.luajava:luajava:4.0.2'
     implementation 'party.iroiro.luajava:lua54:4.0.2'
-    runtimeOnly 'party.iroiro.luajava:lua54-platform:4.0.2:natives-desktop' // what is this? is this necessary?
-    implementation 'net.dv8tion:JDA:5.5.1'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.24.3'
+    runtimeOnly 'party.iroiro.luajava:lua54-platform:4.0.2:natives-desktop'
+    implementation 'net.dv8tion:JDA:5.6.1'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.25.0'
     implementation 'io.socket:socket.io-client:2.1.2'
     implementation 'de.maxhenkel.opus4j:opus4j:2.0.2'
     implementation 'org.concentus:Concentus:1.0-SNAPSHOT'
