--- a/src/main/resources/default-config.yml
+++ b/src/main/resources/default-config.yml
@@ -25,7 +25,7 @@ backup:
 
 database:
   enabled: false
-  address: 'localhost' # jdbc:mariadb://<address>/chomens_bot
+  address: 'jdbc:mariadb://localhost/chomens_bot'
   username: 'chomens_bot'
   password: '123456'
 
